# interceptor-command-sim

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  PROJECT.md  README.md
assets/sample-aar/: replay-timeline.json  session-summary.json  session-summary.md
assets/sample-aar/straight/: replay-timeline.json  session-summary.json  session-summary.md
assets/sample-aar/unguided_intercept/: replay-timeline.json  session-summary.json  session-summary.md
assets/screenshots/: tactical-display-tracked_intercept-state.json  tactical-display-unguided_intercept-state.json  tactical-viewer-guidance-state.json  tactical-viewer-straight-state.json
clients/command-console/: README.md
clients/command-console/src/: main.cpp
clients/tactical-viewer/: README.md
clients/tactical-viewer-gui/: README.md
clients/tactical-viewer-gui/src/: app.hpp  app_args.cpp  app_control.cpp  app_labels.cpp  app_layout.cpp  app_net.cpp  app_render_context.cpp  app_render_controls.cpp  app_render_dump.cpp  app_render_map.cpp  app_render_status_panels.cpp  app_setup.cpp  app_snapshot.cpp  app_support.cpp  app_visual_state.cpp  main.cpp  render_internal.hpp
clients/tactical-viewer/src/: main.cpp
common/include/icss/core/: artifact_readers.hpp  config.hpp  runtime.hpp  simulation.hpp  types.hpp
common/include/icss/net/: transport.hpp
common/include/icss/protocol/: frame_codec.hpp  messages.hpp  payloads.hpp  serialization.hpp
common/include/icss/support/: minijson.hpp
common/include/icss/view/: ascii_tactical_view.hpp  replay_cursor.hpp
common/src/: artifact_readers.cpp  ascii_tactical_view.cpp  config.cpp  frame_codec.cpp  runtime.cpp  serialization.cpp  simulation.cpp  simulation_commands.cpp  simulation_internal.hpp  simulation_snapshot.cpp  simulation_state.cpp  simulation_summary.cpp  simulation_support.cpp  transport.cpp  transport_common.cpp  transport_inprocess.cpp  transport_internal.hpp  transport_socket_live.cpp
configs/: logging.example.yaml  scenario.example.yaml  server.example.yaml
debug-frames/: event-scroll.json  full-run.json  track-only.json
docs/: aar.md  architecture.md  design-faq.md  discussion-guide.md  implementation-checklist.md  operations.md  protocol.md  reviewer-brief.md  scenario.md  test-report.md  walkthrough.md  week1-checklist.md
examples/: sample-output-straight.md  sample-output-unguided_intercept.md  sample-output.md
scripts/: run_live_demo.sh
server/: README.md
server/src/: main.cpp
tests/cmake/: expect_checked_in_sample_bundle_matches_regen.cmake  expect_live_demo_success.cmake  expect_sample_regen_success.cmake  expect_server_success.cmake
tests/protocol/: README.md
tests/protocol/src/: command_console_socket_live_smoke.cpp  frame_codec_smoke.cpp  payload_codec_smoke.cpp  protocol_smoke.cpp  server_process_live_json_smoke.cpp  server_process_live_override_precedence_smoke.cpp  server_process_live_run_forever_smoke.cpp  server_process_live_smoke.cpp  socket_live_single_session_policy_smoke.cpp  tactical_viewer_gui_aar_smoke.cpp  tactical_viewer_gui_auto_rejoin_smoke.cpp  tactical_viewer_gui_command_feedback_smoke.cpp  tactical_viewer_gui_duplicate_start_reject_smoke.cpp  tactical_viewer_gui_live_smoke.cpp  tactical_viewer_gui_malformed_udp_smoke.cpp  tactical_viewer_gui_parameter_timeout_smoke.cpp  tactical_viewer_gui_profile_timeout_smoke.cpp  tactical_viewer_gui_relative_dump_paths_smoke.cpp  tactical_viewer_gui_repo_root_config_smoke.cpp  tactical_viewer_gui_review_smoke.cpp  tactical_viewer_gui_setup_next_start_smoke.cpp  tactical_viewer_gui_snapshot_ordering_smoke.cpp  transport_backend_smoke.cpp
tests/resilience/: README.md
tests/resilience/src/: resilience_smoke.cpp  socket_live_snapshot_batching_smoke.cpp  socket_live_telemetry_alignment_smoke.cpp  socket_live_viewer_timeout_smoke.cpp  timeout_smoke.cpp
tests/scenario/: README.md
tests/scenario/src/: aar_artifacts_relative_dir_smoke.cpp  artifact_reader_smoke.cpp  artifact_summary_cli_smoke.cpp  example_output_relative_path_smoke.cpp  replay_cursor_smoke.cpp  runtime_artifact_determinism_smoke.cpp  runtime_artifact_paths_smoke.cpp  runtime_config_invalid_values_smoke.cpp  runtime_config_smoke.cpp  scenario_branching_smoke.cpp  scenario_flow.cpp  session_log_smoke.cpp  validation_rejects_invalid_flow.cpp
tests/support/: process_smoke.hpp  temp_repo.hpp
tools/src/: artifact_summary.cpp
